Issue #7566 X closing button for cookies panel is not visible
This commit contains some more changes to the CSS declarations,
this is to make them more consistent and to target only the
X button with the color change, leaving the background alones

--- a/web/client/themes/default/less/cookie.less
+++ b/web/client/themes/default/less/cookie.less
@@ -13,18 +13,17 @@
 
     .mapstore-cookie-panel,
     .cookie-body-container {
-        .color-var(@theme-vars[main-color]);
         .background-color-var(@theme-vars[main-bg]);
     }
 
     .cookie-title,
     .cookie-header {
         .color-var(@theme-vars[primary-contrast]);
+        .cookie-close-btn {
+            .color-var(@theme-vars[main-color]);
+        }
     }
 
-    .cookie-close-btn {
-        .color-var(@theme-vars[main-color]);
-    }
 }
 
 // **************
@@ -149,6 +148,6 @@
 .cookie-header > .cookie-close-btn {
     float: right;
     cursor: pointer;
-    font-size: 30px;
+    font-size: 40px;
     width: 44px;
 }
